<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".View.login.ResetPasswordFragment">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="83dp"
        android:layout_height="51dp"
        android:gravity="center"
        android:text="@string/tv_username"
        android:background="@color/white"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="83dp"
        android:layout_height="51dp"
        android:gravity="center"
        android:textSize="18sp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:text="@string/tv_newPwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="83dp"
        android:layout_height="51dp"
        android:gravity="center"
        android:background="@color/white"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:text="@string/tv_identification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="83dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/tv_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/ed_reset_username"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="请输入用户名"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <EditText
        android:id="@+id/ed_reset_newpwd"
        android:layout_width="216dp"
        android:layout_height="51dp"

        android:ems="10"
        android:hint="请输入新密码"
        android:inputType="textPassword"

        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_reset_username"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <EditText
        android:id="@+id/ed_reset_idcard"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="请输入身份证"
        android:inputType="number"

        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_reset_newpwd"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <EditText
        android:id="@+id/ed_reset_phone"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:hint="请输入手机号"
        android:ems="10"
        android:inputType="phone"

        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_reset_idcard"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <Button
        android:id="@+id/btn_resetPwd"
        android:layout_width="129dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/LightSkyBlue"
        android:text="@string/resetPwd"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.785" />
</androidx.constraintlayout.widget.ConstraintLayout>