<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:text="诊断结果"
        android:textColor="@color/black"
        android:layout_gravity="center"
        >

    </TextView>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/inputComment"
        android:textColor="@color/black"

        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_doctorName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/ed_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:minLines="5"
        android:maxLines="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269"
        android:autofillHints=""
        android:scrollbars="vertical"
        android:inputType="textMultiLine"
        android:background="@drawable/edit"
        >

    </EditText>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <Button
            android:id="@+id/btn_cancel"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:backgroundTint="@color/LightSkyBlue"
            android:text="@string/cancelComment"
            android:textColor="@color/black"
            android:layout_marginLeft="50dp"
            android:layout_gravity="top"
            />

        <Button
            android:id="@+id/btn_addComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="50dp"
            android:backgroundTint="@color/LightSkyBlue"
            android:text="@string/addComments"
            android:textColor="@color/black" />


    </RelativeLayout>




</LinearLayout>