<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.demosystem.View.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailStatementFragment"
            app:destination="@id/detailStatementFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.demosystem.View.search.searchFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_dashboard_to_statementListFragment2"
            app:destination="@id/statementListFragment2"
            app:enterAnim="@anim/picture_anim_fade_in"
            app:exitAnim="@anim/picture_anim_fade_out" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.demosystem.View.userSetting.userSettingFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_user_setting" >
        <action
            android:id="@+id/action_navigation_notifications_to_settingFragment22"
            app:destination="@id/settingFragment2"
            app:enterAnim="@anim/picture_anim_fade_in"
            app:exitAnim="@anim/picture_anim_fade_out" />
        <action
            android:id="@+id/action_navigation_notifications_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingFragment2"
        android:name="com.example.demosystem.View.userSetting.changePasswordFragment"
        android:label="fragment_setting"
        tools:layout="@layout/fragment_setting" >
        <action
            android:id="@+id/action_settingFragment2_to_navigation_notifications2"
            app:destination="@id/navigation_notifications"
            app:enterAnim="@anim/picture_anim_enter"
            app:exitAnim="@anim/picture_anim_exit" />
    </fragment>
    <fragment
        android:id="@+id/detailStatementFragment"
        android:name="com.example.demosystem.View.detail.DetailStatementFragment"
        android:label="fragment_detail_statement"
        tools:layout="@layout/fragment_detail_statement" >
        <action
            android:id="@+id/action_detailStatementFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit" />
    </fragment>
    <fragment
        android:id="@+id/statementListFragment2"
        android:name="com.example.demosystem.View.detail.StatementListFragment"
        android:label="StatementListFragment" >
        <action
            android:id="@+id/action_statementListFragment2_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard"
            app:enterAnim="@anim/picture_anim_enter"
            app:exitAnim="@anim/picture_anim_exit" />
        <action
            android:id="@+id/action_statementListFragment2_to_detailStatementFragment"
            app:destination="@id/detailStatementFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.demosystem.View.userSetting.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>
</navigation>